output.txt
    Checking api-gateway v0.1.1 (/Users/chanthawat/Developments/gridtokenx-platform-infa/gridtokenx-apigateway)
error[E0412]: cannot find type `ChangePasswordRequest` in this scope
   --> src/handlers/auth/password_reset.rs:232:20
    |
232 |     request_body = ChangePasswordRequest,
    |                    ^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/handlers/auth/types.rs:101:1
    |
101 | pub struct ForgotPasswordRequest {
    | -------------------------------- similarly named struct `ForgotPasswordRequest` defined here
    |
help: a struct with a similar name exists
    |
232 -     request_body = ChangePasswordRequest,
232 +     request_body = ForgotPasswordRequest,
    |
help: consider importing this struct
    |
  5 + use crate::handlers::auth::types::ChangePasswordRequest;
    |

warning: use of deprecated function `handlers::auth::routes::auth_routes`: Use v1_auth_routes instead
  --> src/handlers/mod.rs:36:16
   |
36 | pub use auth::{auth_routes, token_routes, user_meter_routes, meter_info_routes};
   |                ^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `handlers::auth::routes::token_routes`: Use v1_wallets_routes instead
  --> src/handlers/mod.rs:36:29
   |
36 | pub use auth::{auth_routes, token_routes, user_meter_routes, meter_info_routes};
   |                             ^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::user_meter_routes`: Use v1_meters_routes instead
  --> src/handlers/mod.rs:36:43
   |
36 | pub use auth::{auth_routes, token_routes, user_meter_routes, meter_info_routes};
   |                                           ^^^^^^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::meter_info_routes`: Use v1_meters_routes instead
  --> src/handlers/mod.rs:36:62
   |
36 | pub use auth::{auth_routes, token_routes, user_meter_routes, meter_info_routes};
   |                                                              ^^^^^^^^^^^^^^^^^

warning: use of deprecated function `handlers::meter::stub::meter_routes`: Use v1_meters_routes instead
  --> src/handlers/mod.rs:39:16
   |
39 | pub use meter::meter_routes;
   |                ^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::auth_routes`: Use v1_auth_routes instead
  --> src/handlers/auth/mod.rs:38:5
   |
38 |     auth_routes, token_routes, user_meter_routes, meter_info_routes,
   |     ^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::token_routes`: Use v1_wallets_routes instead
  --> src/handlers/auth/mod.rs:38:18
   |
38 |     auth_routes, token_routes, user_meter_routes, meter_info_routes,
   |                  ^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::user_meter_routes`: Use v1_meters_routes instead
  --> src/handlers/auth/mod.rs:38:32
   |
38 |     auth_routes, token_routes, user_meter_routes, meter_info_routes,
   |                                ^^^^^^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::meter_info_routes`: Use v1_meters_routes instead
  --> src/handlers/auth/mod.rs:38:51
   |
38 |     auth_routes, token_routes, user_meter_routes, meter_info_routes,
   |                                                   ^^^^^^^^^^^^^^^^^

warning: use of deprecated function `handlers::meter::stub::meter_routes`: Use v1_meters_routes instead
  --> src/handlers/meter/mod.rs:13:5
   |
13 |     meter_routes, submit_reading, meter_health,
   |     ^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::auth_routes`: Use v1_auth_routes instead
  --> src/router/mod.rs:20:5
   |
20 |     auth_routes, token_routes, user_meter_routes, meter_info_routes, meter_routes,
   |     ^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::token_routes`: Use v1_wallets_routes instead
  --> src/router/mod.rs:20:18
   |
20 |     auth_routes, token_routes, user_meter_routes, meter_info_routes, meter_routes,
   |                  ^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::user_meter_routes`: Use v1_meters_routes instead
  --> src/router/mod.rs:20:32
   |
20 |     auth_routes, token_routes, user_meter_routes, meter_info_routes, meter_routes,
   |                                ^^^^^^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::meter_info_routes`: Use v1_meters_routes instead
  --> src/router/mod.rs:20:51
   |
20 |     auth_routes, token_routes, user_meter_routes, meter_info_routes, meter_routes,
   |                                                   ^^^^^^^^^^^^^^^^^

warning: use of deprecated function `handlers::meter::stub::meter_routes`: Use v1_meters_routes instead
  --> src/router/mod.rs:20:70
   |
20 |     auth_routes, token_routes, user_meter_routes, meter_info_routes, meter_routes,
   |                                                                      ^^^^^^^^^^^^

warning: use of deprecated function `handlers::meter::stub::meter_routes`: Use v1_meters_routes instead
   --> src/router/mod.rs:111:25
    |
111 |     let legacy_meters = meter_routes();
    |                         ^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::auth_routes`: Use v1_auth_routes instead
   --> src/router/mod.rs:112:23
    |
112 |     let legacy_auth = auth_routes();
    |                       ^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::token_routes`: Use v1_wallets_routes instead
   --> src/router/mod.rs:113:25
    |
113 |     let legacy_tokens = token_routes();
    |                         ^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::user_meter_routes`: Use v1_meters_routes instead
   --> src/router/mod.rs:114:23
    |
114 |     let legacy_user = user_meter_routes();
    |                       ^^^^^^^^^^^^^^^^^

warning: use of deprecated function `handlers::auth::routes::meter_info_routes`: Use v1_meters_routes instead
   --> src/router/mod.rs:115:29
    |
115 |     let legacy_meter_info = meter_info_routes();
    |                             ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0412`.
warning: `api-gateway` (lib) generated 20 warnings
error: could not compile `api-gateway` (lib) due to 1 previous error; 20 warnings emitted
